# guesslang_service

./: README.md  azure-pipelines-publish.yml  pyproject.toml  requirements.txt
guesslang_service/: console.py  demo.py  service.py
tests/: test_guesslang_service.py
