[tool.poetry]
name = "guesslang_service"
version = "0.1.0"
description = "Wrap guesslang package as a HTTP service"
authors = ["Anselm Wang <anselmwang@gmail.com>"]
homepage = "https://github.com/anselmwang/guesslang_service"
repository = "https://github.com/anselmwang/guesslang_service"
readme= "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.4"
guesslang = "^2.2.1"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
streamlit = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
keyring = "^23.5.0"
artifacts-keyring = "^0.3.1"
twine = "^3.8.0"
pre-commit = "^2.17.0"
isort = "^5.10.1"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
http_guesslang = 'guesslang_service.service:main'